Edits to images

--- a/extra.html
+++ b/extra.html
@@ -19,7 +19,7 @@
     </nav>
 
     <!-- Header -->
-    <header class="header" style="background-image: url('images/header.png');">
+    <header class="header" style="background-image: url('images/extra.png');">
         <div class="header-overlay"></div>
         <h1>Extra Curricular Activities</h1>
     </header>
