--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     </nav>
 
     <!-- Header Section -->
-    <header class="header" style="background-image: url('images/header.jpg');">
+
+    <header class="header" style="background-image: url('images/header.png');">
         <div class="header-overlay"></div>
         <h1>Arghya Chakraborty</h1>
     </header>
@@ -30,8 +31,7 @@
         <p>
             I am a Research Scholar at the School of Technology and Computer Science, 
             Tata Institute of Fundamental Research (TIFR), Mumbai. My advisor is 
-            Prof. Prahladh Harsha. My research interests lie broadly in theoretical 
-            computer science.
+            Prof. Prahladh Harsha.
         </p>
 
         <p>
@@ -39,7 +39,9 @@
             from the Indian Statistical Institute, Bangalore.
         </p>
 
-        <h2>Profile Photo</h2>
+        <p>
+            My research interests include Algorithms and their Complexity, mostly Online Algorithms. Graph Matchings with fairness and Online Algorithms with Learning are topics that I am currently working on.
+        </p>
         <img src="images/profile.jpg" alt="Profile Photo" class="responsive-img">
 
         <footer>
