--- a/research.html
+++ b/research.html
@@ -19,7 +19,7 @@
     </nav>
 
     <!-- Header -->
-    <header class="header" style="background-image: url('images/header.png');">
+    <header class="header" style="background-image: url('images/research.png');">
         <div class="header-overlay"></div>
         <h1>Research</h1>
     </header>
