--- a/extra.html
+++ b/extra.html
@@ -28,12 +28,18 @@
 
         <h2>Highlights</h2>
         <p>
-            Outside academics, I enjoy pursuing several extracurricular interests and hobbies
-            that enrich my life and keep me balanced.
+            In my spare time, I enjoy playing football, chess and some card games or board games once in a while. I also enjoy formulating real life problems in terms of mathematics along with my friends.
+        </p>
+        <p>
+            I like spending time with nature. Hence I enjoy going on treks, cycling and swimming.
+        </p>
+        <p>
+            I am also interested in the mathematics in music and have recently started playing the piano and the flute.
+        </p>
+        <p>
+            Anything intellectual seems to interest me, so feel free to contact me anytime.
         </p>
 
-        <h2>Representative Image</h2>
-        <img src="images/extra.png" alt="Extra Curricular Activities" class="responsive-img">
 
         <footer>
             © 2025 Arghya Chakraborty
