--- a/research.html
+++ b/research.html
@@ -28,12 +28,16 @@
 
         <h2>Research Overview</h2>
         <p>
-            My research interests lie mainly in the domain of theoretical computer science,
-            particularly in areas related to algorithms, online decision-making, and complexity.
+            I am currently working on Graph Matchings and Online Algorithms with Learning. More generally I am interested in Graph problems, Algorithms and Complexity Theory.
+        </p>
+        <h2>RESEARCH WORK</h2>
+        <p>
+            <ul>
+                <li>[Arghya Chakraborty, Rahul Vaze] Online facility location with weights and congestion (https://arxiv.org/abs/2211.11961)</li>
+                <li>[Amey Bhangale, Arghya Chakraborty, Prahladh Harsha] Optimal Online Bipartite Matching in Degree-2 Graphs (https://arxiv.org/abs/2511.16025)</li>
+            </ul>
         </p>
 
-        <h2>Representative Image</h2>
-        <img src="images/research.png" alt="Research Image" class="responsive-img">
 
         <footer>
             © 2025 Arghya Chakraborty
