--- a/index.html
+++ b/index.html
@@ -30,20 +30,23 @@
     <div class="left-column">
         <h2>About Me</h2>
         <p>
-            I am a Research Scholar at the School of Technology and Computer Science, 
-            Tata Institute of Fundamental Research (TIFR), Mumbai. My advisor is 
-            Prof. Prahladh Harsha.
+            I am a Research Scholar at the <a href="http://www.tcs.tifr.res.in/">School of Technology and Computer Science</a>, 
+            Tata Institute of Fundamental Research (<a href="https://main.tifr.res.in/">TIFR</a>), Mumbai. My advisor is 
+            Prof. <a href="https://www.tcs.tifr.res.in/~prahladh/">Prahladh Harsha</a>.
         </p>
 
         <p>
             Before joining TIFR, I finished my Bachelor’s degree in Mathematics (BMath) 
-            from the Indian Statistical Institute, Bangalore.
+            from the <a href="https://www.isibang.ac.in/">Indian Statistical Institute</a>, Bangalore.
         </p>
 
         <p>
             My research interests include Algorithms and their Complexity, mostly Online Algorithms. 
             Graph Matchings with fairness and Online Algorithms with Learning are topics that 
             I am currently working on.
+        </p>
+        <p>
+            My CV can be found <a href="docs/cv.pdf" target="_blank">here</a>.
         </p>
     </div>
 
