--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
 
     <div class="right-column">
-        <img src="images/profile.jpg" alt="Profile Photo" class="responsive-img">
+        <img src="images/profile1.jpg" alt="Profile Photo" class="responsive-img">
     </div>
 
 </div>
